--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -145,12 +145,11 @@
   <H6 STYLE="font-family: 'avenir next rounded std'">
  <div class="container">
   
- <h2 class="text-center">Категории продуктов</h2>
  
- <H6 STYLE="font-family: 'avenir next rounded std'"></H6>
+ <H2 class="text-center" STYLE="font-family: 'Mak-Bold'">Категории продуктов</H2>
  <br>
   <div class="row">
-  
+    
    
     <!-- <div class="card"> -->
      <!-- <div class="card-img">
