--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -55,7 +55,7 @@
           <!--<a class="dropdown-item" href="#">Панель</a>-->
           <a class="dropdown-item" href="{% url 'checkout:oderView' %}">Заказы</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">выход из системы</a>
+          <a class="dropdown-item" href="/accounts/logout/">выход из системы</a>
         </div>
       </li>
       {% else %}
