rose alert purchase means registration

--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -37,9 +37,9 @@
 {% if request.user.is_authenticated %}
 <a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-secondary text-uppercase"> <i class="fas fa-shopping-cart"></i>  Заказать </a>
 {% else %}
-<script>
-    alert('заказать продукцию можно будет только после регистрации');
-  </script>
+
+<h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">заказать продукцию можно только после регистрации</p></span></a></h6>
+
 {% endif %}
     
      
