--- a/cart/templates/cart/home.html
+++ b/cart/templates/cart/home.html
@@ -65,7 +65,7 @@
       <!--<td>₽{{ cart.get_total }}</td>-->
       <td>₽{{ cart.item.calc }}</td>
       <td>
-        <a class="mr-2" href="{% url 'mainapp:decrease-cart' cart.item.slug %}"><span class="badge badge-light"><button style="font-size:14px"> <i class="fa fa-cut"></i></button></span></a> 
+        <a class="mr-2" href="{% url 'mainapp:decrease-cart' cart.item.slug %}"><span class="badge badge-light"><button style="font-size:14px"> <i class="fa fa-trash" aria-hidden="true"></i></i></button></span></a> 
        
      <!--   {{ cart.quantity }} -->
      <!-- <a class="ml-2" href="{% url 'mainapp:cart' cart.item.slug %}" ><span class="badge badge-light"><i class="fas fa-plus"></i></span></a> -->
