--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -53,19 +53,9 @@
    
     </div> </div>
 </div>
-<!--
-<div style="position:absolute;z-index:10000;top:515px;margin-left:250px;">
-  <img src="/media/products/005.png" border="0"/>
-  </div>
-   -->
-<!--
-  <div style="position:absolute;z-index:10000;top:560px;margin-left:500px;">
-    <img src="/media/products/1p.png" border="0"/>
-    <h6>решение для вас</h6>
-    </div>
-  -->
+
   <div style="position:absolute;z-index:10000;top:600px;margin-left:700px;">
-  <!--  <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>-->
+
     
     <i class="fa fa-2x fa-spin fa-refresh"></i>  
 
@@ -89,28 +79,11 @@
  
     </div>
     <div style="position:absolute;z-index:10000;top:600px;margin-left:1100px;">
-   <!--   <i class="fa fa-cog fa-spin fa-3x fa-fw"></i>
-      <span class="sr-only">Загрузка...</span>
 
-      <h6>производство</h6>  -->
       </div>
 
     </div>
-<!--
 
-    <div style="position:absolute;z-index:10000;top:600px;margin-left:020px;">
-  
-      <span class="sr-only">Загрузка...</span>
-  
-     
-      <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
-        <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
-        <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
-      </svg> 
-        
-      <h6>быстро</h6>
-    </div>
-  -->
       <div style="position:absolute;z-index:10000;top:580px;margin-left:450px;">
         <div class="rating">
         
@@ -129,13 +102,6 @@
           </div>
 
         
-
-  <!-- <div class="container my-5"> -->
-    <!-- <h2 class="my-5">Категории продуктов</h2> -->
-    <!-- <div class="row"></div> -->
-    <!-- <div class="row"> -->
-    <!-- <div class="row"></div> -->
-
    
    
    
@@ -169,11 +135,17 @@
 	      <!-- <img align="center" src="{{ product.mainimage.url }}" class="img-fluid"> -->
 	      <!-- <img align="center" src="media/{{ product.mainimage }}" class="img-fluid"> -->
           <!-- { % thumbnail 'product.mainimage' "50" as im % } -->
-          
-      		{% thumbnail product.mainimage "300" as im %}
+          <!--  im = get_thumbnail(my_file, '100x100', crop='center', quality=99)
+
+          {% load thumbnail %}
+
+          {% thumbnail recipe.image "430x250" as thumb %}
+               <img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ recipe.title }}" />
+          {% endthumbnail %}-->
+
+
+      		{% thumbnail product.mainimage "100" as im %}
 		        <img align="center" src="{{ im.url }}" alt="not found" class="img-fluid">
-		        <!-- { % empty % }
-		        <p>No image</p> -->
 			{% endthumbnail %}
 	     </div>
 
@@ -217,12 +189,21 @@
 <br>
 <br>
 
-
-  <a href="/">
-    <figure class="stock">
-      <img src="/media/products/baner.jpg" width="1450" height="450">
+<a href="/">
+  <figure class="stock">
+    <img src="/media/products/baner.jpg"width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ recipe.title }}" />
     </figure>
-  </a>
+</a>
+
+
+{% load thumbnail %}
+{% thumbnail recipe.image "1450x450" as thumb %}
+<a href="/">
+  <figure class="stock">
+    <img src="{{ thumb.url }}"width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ recipe.title }}" />
+    </figure>
+</a>
+{% endthumbnail %}
 
 
               
@@ -234,10 +215,24 @@
 
 
 
-<body>
 
-  <video controls loop>
-    <source src="media/box_production1.mp4" type="video/mp4">
-   
-    Your browser does not support the video tag.
-  </video>
+{% thumbnail product.mainimage "100" as im %}
+<img align="center" src="{{ im.url }}" alt="not found" class="img-fluid">
+
+{% endthumbnail %}
+
+
+
+
+{% load thumbnail %}
+{% thumbnail recipe.image "1450x450" as thumb %}
+<a href="/">
+  <figure class="stock">
+    <img src="/media/products/baner.jpg"width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ recipe.title }}" />
+    </figure>
+</a>
+{% endthumbnail %}
+
+{% thumbnail recipe.image "430x250" as thumb %}
+     <img src="{{ thumb.url }}" width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ recipe.title }}" />
+{% endthumbnail %}-->
