--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -1,5 +1,5 @@
  
-    </div>
+  
      
 
         <a href="/">
@@ -14,7 +14,9 @@
 {% extends 'products/base.html' %}
 {% load thumbnail %}
 
-
+	{% thumbnail product.mainimage "300" as im %}
+		        <img align="center" src="{{ im.url }}" alt="not found" class="img-fluid">
+			{% endthumbnail %}
 
 
 {% load crispy_forms_tags %}
