+ green find btn

--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -49,7 +49,7 @@
       <form method="get">
         {{ filter.form| crispy }}
         <button type= "submit"
-        type="button" class="btn btn-outline-secondary">Искать</button>
+        type="button" class="btn btn-success">Искать</button>
        
       </button>
    
