--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -1,18 +1,11 @@
  
-  
-     
 
-        <a href="/">
-          <figure class="stock">
-            <img src="/media/products/банер2.jpg" width="1450" height="450">
-          </figure>
-        </a>
-
-
-       
 
 {% extends 'products/base.html' %}
 {% load thumbnail %}
+
+
+
 
 	{% thumbnail product.mainimage "300" as im %}
 		        <img align="center" src="{{ im.url }}" alt="not found" class="img-fluid">
@@ -28,9 +21,19 @@
 </div> 
 
 
-
-
 {% block content %}
+
+
+
+<div>
+  <a href="/">
+    <figure class="stock">
+      <img src="/media/products/банер2.jpg" width="1450" height="450">
+    </figure>
+  </a>
+
+</div>
+
 <style>
   .outer {
 
@@ -41,7 +44,9 @@
   }
 </style>
 
-<div class="outer">
+
+
+<div class="outer"><div align = "center"
   <div class="inner"><div align = "center"
     class="col-md-3">
       <span class="icon"><i class="fa fa-search"></i></span>
@@ -50,19 +55,18 @@
         {{ filter.form| crispy }}
         <button type= "submit"
         type="button" class="btn btn-success">Искать</button>
-       
+
       </button>
    
     </div> </div>
 </div>
 
-  <div style="position:absolute;z-index:10000;top:600px;margin-left:700px;">
 
-    
+<div>
+  <div style="position:absolute;z-index:10000;top:700px;margin-left:700px;">
     <i class="fa fa-2x fa-spin fa-refresh"></i>  
 
-  
-    <div style="position:absolute;z-index:10000;top:-19px;margin-left:10px;">
+    <div style="position:absolute;z-index:10000;top:0px;margin-left:-250px;">
     <h6 class="card-title"><span class="text-muted">   <svg xmlns="http://www.w3.org/2000/svg" width="58" height="38" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
       <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
       <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
@@ -70,23 +74,18 @@
     <h6 class="card-title"><span class="text-muted">мгновенный расчет</h6></span>
   </div>
 
- 
-    
-  <div style="position:absolute;z-index:10000;top:-21px;margin-left:189px;">
+  <div style="position:absolute;z-index:10000;top:-9px;margin-left:265px;">
     <h6 class="card-title"><span class="text-muted"><h1><i class="fa fa-shopping-cart" aria-hidden="true"></i></h1> </span></a></h6>
-    <h6 class="card-title"><span class="text-muted">онлайн</h6></span>
-    
-
-
+    <h6 class="card-title"><span class="text-muted">онлайн </h6></span>
  
     </div>
-    <div style="position:absolute;z-index:10000;top:600px;margin-left:1100px;">
+    <div style="position:absolute;z-index:10000;top:750px;margin-left:1100px;">
 
       </div>
 
     </div>
 
-      <div style="position:absolute;z-index:10000;top:580px;margin-left:450px;">
+      <div style="position:absolute;z-index:10000;top:700px;margin-left:150px;">
         <div class="rating">
         
          <h6 class="card-title"><span class="text-muted"> <h2> <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></h2> </span></a></h6>
@@ -95,7 +94,7 @@
         </div>
 
 
-        <div style="position:absolute;z-index:10000;top:587px;margin-left:1050px;">
+        <div style="position:absolute;z-index:10000;top:700px;margin-left:1200px;">
         
         
           <h6 class="card-title"><span class="text-muted">   <h2><i class="fas fa-truck"></i></h2></span></a></h6>
@@ -103,9 +102,13 @@
           <h6 class="card-title"><span class="text-muted">доставка</h6></span>
           </div>
 
-        
-   
-   
+        </div>
+
+
+          <br>
+          <br>
+          <br>
+          <br>
    
 
 <div class="blog">
@@ -114,11 +117,14 @@
  <div class="container">
   
  
- <H2 class="text-center" STYLE="font-family: 'Mak-Bold'">Категории продуктов</H2>
+ <H2 class="text-center" STYLE="font-family: 'avenir next rounded std'">Категории продуктов</H2>
  <br>
   <div class="row">
     
-   
+          <br>
+          <br>
+          <br>
+          <br>
     <!-- <div class="card"> -->
      <!-- <div class="card-img">
       <img align="center" src="images/posts/polit.jpg" class="img-fluid">
@@ -152,7 +158,7 @@
 	     </div>
 
 	    <div class="card-body">
-        <H6 STYLE="font-family: 'Courier New'"></H6>
+        <H6 STYLE="font-family: 'avenir next rounded std'"></H6>
          <h6 class="card-title"><a href="products_by_category/{{ product.id }}"><p style="color:rgb(36, 163, 60)">{{ product.name }} ></p></a></h6>
 
   
