--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -3,7 +3,12 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-  <a class="navbar-brand" href="/"><p style="color:rgb(229, 152, 147)">Домой</p></a>
+
+  <a href="/">
+    <figure class="stock">
+      <img src="/media/products/logo_rose.png" width="65" height="45">
+    </figure>
+  </a>
  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
