--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -67,15 +67,15 @@
     <i class="fa fa-2x fa-spin fa-refresh"></i>  
 
     <div style="position:absolute;z-index:10000;top:0px;margin-left:-250px;">
-    <h6 class="card-title"><span class="text-muted">   <svg xmlns="http://www.w3.org/2000/svg" width="58" height="38" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
+    <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)"> <svg xmlns="http://www.w3.org/2000/svg" width="58" height="38" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
       <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
       <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
     </svg> </span></a></h6>
-    <h6 class="card-title"><span class="text-muted">мгновенный расчет</h6></span>
+  <div><h6 class="card-title"><span class="text-muted">мгновенный расчет</h6></span></div>
   </div>
 
   <div style="position:absolute;z-index:10000;top:-9px;margin-left:265px;">
-    <h6 class="card-title"><span class="text-muted"><h1><i class="fa fa-shopping-cart" aria-hidden="true"></i></h1> </span></a></h6>
+    <h6 class="card-title"><span class="text-muted"> <h1><i class="fa fa-shopping-cart" aria-hidden="true"></i></h1> </span></a></h6>
     <h6 class="card-title"><span class="text-muted">онлайн </h6></span>
  
     </div>
@@ -88,7 +88,7 @@
       <div style="position:absolute;z-index:10000;top:700px;margin-left:150px;">
         <div class="rating">
         
-         <h6 class="card-title"><span class="text-muted"> <h2> <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></h2> </span></a></h6>
+         <h6 class="card-title"><span class="text-muted"> <h2><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></h2> </span></a></h6>
          <h6 class="card-title"><span class="text-muted">высокое качество</h6></span>
           </div>
         </div>
