light gray line on home page

--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load thumbnail %}
 
+
+{% block style %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -104,6 +108,7 @@
  
   </div>
 -->
+
 <br>
 
 <h6 class="text-center"><span class="text-muted"> <p style="color:rgb(229, 152, 147)">1997<img align="center" src="/media/products/005.png" alt="not found" class="img-fluid">2021</p></h6></span>  
@@ -113,3 +118,4 @@
 
 </div>
 
+{% endblock %}
