--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -74,7 +74,7 @@
   <div><h6 class="card-title"><span class="text-muted">мгновенный расчет</h6></span></div>
   </div>
 
-  <div style="position:absolute;z-index:10000;top:-9px;margin-left:265px;">
+  <div style="position:absolute;z-index:10000;top:-5px;margin-left:265px;">
     <h6 class="card-title"><span class="text-muted"> <h1><i class="fa fa-shopping-cart" aria-hidden="true"></i></h1> </span></a></h6>
     <h6 class="card-title"><span class="text-muted">онлайн </h6></span>
  
@@ -85,7 +85,7 @@
 
     </div>
 
-      <div style="position:absolute;z-index:10000;top:700px;margin-left:150px;">
+      <div style="position:absolute;z-index:10000;top:700px;margin-left:130px;">
         <div class="rating">
         
          <h6 class="card-title"><span class="text-muted"> <h2><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></h2> </span></a></h6>
@@ -94,7 +94,7 @@
         </div>
 
 
-        <div style="position:absolute;z-index:10000;top:700px;margin-left:1200px;">
+        <div style="position:absolute;z-index:10000;top:705px;margin-left:1220px;">
         
         
           <h6 class="card-title"><span class="text-muted">   <h2><i class="fas fa-truck"></i></h2></span></a></h6>
@@ -187,7 +187,7 @@
 </div>
 
   
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light"><br><br></nav>
 
   <div>
     <h6 class="text-center"></h6> 
@@ -197,13 +197,18 @@
 <br>
 <br>
 
+
+
+
+<div>
+
 <a href="/">
   <figure class="stock">
     <img src="/media/products/baner.jpg"width="{{ thumb.width }}" height="{{ thumb.height }}" alt="{{ recipe.title }}" />
     </figure>
 </a>
 
-
+</div>
 {% load thumbnail %}
 {% thumbnail recipe.image "1450x450" as thumb %}
 <a href="/">
