--- a/checkout/templates/checkout/index.html
+++ b/checkout/templates/checkout/index.html
@@ -1,17 +1,19 @@
 {% extends 'products/base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-
+<div class="card-body">
+<ul class="list-group list-group-flush"></ul>
 <div class="container mt-5">
    <div class="row">
       <div class="col-md-9">
+         
          <div class="card mb-5" style="height: auto">
             <div class="card-body">
-               <h4 class="mb-3">Адрес доставки  <span class="text-muted">Проверка</span></h4>
+               <h4 class="mb-3">адрес доставки  <span class="text-muted"></span></h4>
                <form method="POST">
                   {% csrf_token %}
                   {{ form | crispy}}
-                  <button type="submit" class="btn btn-success float-right">Сохранить</button>
+                  <button type="submit" class="btn btn-success float-right">сохранить</button>
                </form>
             </div>
          </div>
@@ -26,19 +28,27 @@
                <p><b>комментарий к заказу :</b> {{ savedAddress.comments}}</p>
            
             </div>
+
+
+
+
             <div class="card-body">
                <!-- Здесь отправка email -->
                <!-- <a href="{% url 'checkout:payment' %}" class="btn btn-primary float-right">Договор-оферта</a> -->
                <!-- <a href="{% url 'checkout:send_email' %}" class="btn btn-secondary float-right">Договор-оферта</a>-->
             </div>
          </div>
-         {% endif %}
+         {% endif %}   
       </div>
+
+
+
+      
       <div class="col-md-3">
          <div class="card" style="height: auto">
             <div class="card-body">
                <ul class="list-group list-group-flush">
-                  <h4 class="mb-3">Предмет счёта <span class="text-muted"></span></h4>
+                  <h4 class="mb-3">предмет счёта <span class="text-muted"></span></h4>
                   {% for item in order_items %}
                   <!--<li class="list-group-item">{{ item.item.name }} x {{ item.quantity }}</li>-->
                   <li class="list-group-item">
@@ -68,40 +78,57 @@
                </ul>
             </div>
             <div class="card-footer">
-               <span class="float-left"><b>Сумма</b></span>
+               <span class="float-left"><b>сумма</b></span>
                <span class="float-right"><b>₽ {{ order_total | floatformat:0 }}</b></span>
-               <br>
                <span class="float-center"><b>(без учета доставки)</b></span>
                <br>
             </div>
+            
          </div>
-      </div>
-   </div>
-   <div class="row">
-      <div class="col-md-9">
-         <div class="card mb-5" style="height: auto">
-            <div class="card-body">
-               <ul class="list-group list-group-flush"></ul>
-               <h4 class="mb-3">Данные  <span class="text-muted"></span></h4>
-               <div class="test_form">
-                  <form action="{% url 'checkout:send_email' %}" method="post" >
-                     {% csrf_token %}
-                     {{ test_form}}
-                     <br> <br>
-                     <button type="submit" class="btn btn-info float-right">Отправить коммерческое предложение</button>
-                  </form>
+
+     <br> 
+   
+            
+                  <div class="col-md-3"></div>
+            <div class="card "row" style="height: auto">
+               <div class="card-body">
+                  <ul class="list-group list-group-flush"></ul>
+             
+                  <h6 class="mb-3"> введите ваше имя<span class="text-muted"></span></h6>
+                  <div class="test_form">
+                     <form action="{% url 'checkout:send_email' %}" method="post" >
+                        {% csrf_token %}
+                        {{ test_form}}
+                        <br> <br>
+                        <button type="submit" class="btn btn-info float-right">отправить коммерческое предложение</button>
+                     </form>
+                  </div>
                </div>
             </div>
-         </div>
-         <div class="row">
-            <div class="col-md-9">
+      </div>
+      
+   </div>
+
+
+
+
+
+
+ 
+
+
+   
+
+ 
+
+            <div class="col-md-14">
                <div class="card mb-5" style="height: auto">
                   <div class="card-body">
                      <ul class="list-group list-group-flush"> </ul>
                      <h4 class="mb-3">  <span class="text-muted"></span></h4>
                      <form method="POST" action="{% url 'checkout:charge' %}">
-                         {% csrf_token %} Спасибо, что вы с нами!
-                        <button class="btn btn-secondary float-right" onclick="myFunction()">Подтвердить заказ</button>
+                         {% csrf_token %} спасибо, что вы с нами!
+                        <button class="btn btn-secondary float-right" onclick="myFunction()">подтвердить заказ</button>
 <!--                        <input type="checkbox" name="option1" id="option1" value="True" checked> Подтвердить-->
 <!--                         <button class="btn btn-success float-right" id="fa" name="button" value="True" onclick="myFunction()">Подтвердить заказ</button>-->
                      </form>
@@ -123,4 +150,18 @@
    <div class="card-body">
      
    </div>
+
+
+ 
+
+
+ 
+
+
+
+
+
+
+
+
 {% endblock %}
