--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -29,7 +29,7 @@
 <a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-secondary text-uppercase"> <i class="fas fa-shopping-cart"></i>  Заказать </a>
 {% else %}
 
-<h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">заказать продукцию можно только после регистрации</p></span></a></h6>
+<h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">пожалуйста, зарегистрируйтесь,иначе мы не будем знать куда доставить заказ</p></span></a></h6>
 
 {% endif %}
     
