--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -107,13 +107,12 @@
  
   </div>
 -->
-  
-<nav class="navbar navbar-expand-lg navbar-light bg-light"><br><br></nav>
 
-  <div>
-    <h6 class="text-center"></h6> 
-    
-    </div>
+<hr  width="100%"; height: 120px; color="	#808080" />
+
+
+
+
 <br>
 
 <h6 class="text-center"><span class="text-muted"> <p style="color:rgb(229, 152, 147)">1997<img align="center" src="/media/products/005.png" alt="not found" class="img-fluid">2021</p></h6></span>  
