--- a/products/templates/products/delivery.html
+++ b/products/templates/products/delivery.html
@@ -1,9 +1,5 @@
 
-  <a href="/">
-    <figure class="stock">
-      <img src="/media/products/банер2.jpg" width="1450" height="450">
-    </figure>
-  </a>
+ 
     
     {% extends 'products/base.html' %}
     {% load thumbnail %}
@@ -12,32 +8,13 @@
     
     
     {% load crispy_forms_tags %}
-    <div class="col-md-">
-      <span class="icon"><i class="fa fa-search"></i></span>
-      <form method="get">
-        {{ filter.form| crispy }}
-      <button type= "submit"
-    class= "btn btn-success btn-buy">
-      искать
-    </button>
-    </div> 
     
     
     
     
     {% block content %}
     
-    <!--
-    <div style="position:absolute;z-index:10000;top:515px;margin-left:250px;">
-      <img src="/media/products/005.png" border="0"/>
-      </div>
-       -->
-    <!--
-      <div style="position:absolute;z-index:10000;top:560px;margin-left:500px;">
-        <img src="/media/products/1p.png" border="0"/>
-        <h6>решение для вас</h6>
-        </div>
-      -->
+    <h5 class="text-center"><span class="text-muted"><i class="fas fa-walking"></i> , <i class="fas fa-truck"></i></h5></span>
       
     <div class="blog">
     
@@ -47,8 +24,8 @@
      <h2 class="text-center">доставка</h2>
      <H6 STYLE="font-family: 'avenir next rounded std'"></H6>
 
-     Стоимость доставки расчитывается отдельно и составляет 300 рублей за груз до 5 кг (пеший курьер) по г. Москва
-     и 2500 рублей (автомобиль)за груз более 5 кг. Документы отправляем почтой.
+     Стоимость доставки расчитывается отдельно и составляет 300 рублей за груз до 5 кг (<i class="fas fa-walking"></i>) по г. Москва
+     и 2500 рублей (<i class="fas fa-truck"></i>)за груз более 5 кг. 
 
    
      <br>
