--- a/products/templates/products/products_details.html
+++ b/products/templates/products/products_details.html
@@ -14,7 +14,7 @@
     <article class="gallery-wrap"> 
     <div class="img-big-wrap">
         {% load thumbnail %}
-        {% thumbnail product.mainimage "300" as im %}
+        {% thumbnail product.mainimage "500" as im %}
         <img align="center" src="{{ im.url }}" alt="not found" class="img-fluid">
     {% endthumbnail %}
   <!--    <div> <a href="#"><img src="/media/{{product.mainimage }}" style="width: 450px"></a></div> -->
@@ -29,7 +29,7 @@
 <a href="{% url 'mainapp:cart' product.slug %}" class="btn  btn-lg  btn-secondary text-uppercase"> <i class="fas fa-shopping-cart"></i>  Заказать </a>
 {% else %}
 
-<h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">пожалуйста, зарегистрируйтесь,иначе мы не будем знать куда доставить заказ</p></span></a></h6>
+<h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)">пожалуйста, зарегистрируйтесь,чтобы  оформить заказ</p></span></a></h6>
 
 {% endif %}
     
@@ -118,11 +118,11 @@
   
         
         <tr>
-            <td>{{product.box_size}}</td>
-            <td>{{product.timeplus}}</td>
-            <td>{{product.tirazh}}</td>
-            <td>{{product.calc}}</td>
-            
+            <td><p style="color:rgb(229, 152, 147)">{{product.box_size}}</p></td>
+            <td><p style="color:rgb(229, 152, 147)">{{product.timeplus}}</p></td>
+            <td><p style="color:rgb(229, 152, 147)">{{product.tirazh}}</p></td>
+            <td><p style="color:rgb(229, 152, 147)">{{product.calc}}</p></td>
+        
 
         </tr>
        {% endfor %}
