clean first page

--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -7,7 +7,7 @@
 
 
 
-	{% thumbnail product.mainimage "350" as im %}
+	{% thumbnail product.mainimage "300" as im %}
 		        <img align="center" src="{{ im.url }}" alt="not found" class="img-fluid">
 			{% endthumbnail %}
 
@@ -40,61 +40,69 @@
   }
 </style>
 
-<br><br>
+<br><br><br><br>
 
-<div class="outer"><div align = "center"
-  <div class="inner"><div align = "center"
-    class="col-md-3">
-    
-      <span class="icon"><i class="fa fa-search"></i></span>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+    <!--  <span class="icon"><i class="fa fa-search"></i> поиск продукта по названию</span>-->
+    </div>
+    <div class="col-sm">
       <H6 STYLE="font-family: 'avenir next rounded std'">
-      <form method="get">
-        {{ filter.form| crispy }}
-        <button type= "submit"
+        <form method="get">
+          {{ filter.form| crispy }}
+    </div>
+    <div class="col-sm">
+      <button type= "submit"
         type="button" class="btn btn-success">Искать</button>
 
       </button>
-   
-    </div> </div>
+    </div>
+  </div>
 </div>
 
-
+<br><br>
 
 
 
 
 <div>
-  <div style="position:absolute;z-index:10000;top:740px;margin-left:750px;">
+  <div style="position:absolute;z-index:10000;top:650px;margin-left:750px;">
     <i class="fa fa-2x fa-spin fa-refresh"></i>  
 
     <div style="position:absolute;z-index:10000;top: -3 px;margin-left:-240px;">
-  <!--  <h6 class="card-title"><span class="text-muted"><p style="color:rgb(229, 152, 147)"> <svg xmlns="http://www.w3.org/2000/svg" width="58" height="38" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
-      <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
-      <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
-    </svg> </span></a></h6> -->
+
   <div><h5 class="card-title"><span class="text-muted"><span class="text-muted"> <svg xmlns="http://www.w3.org/2000/svg" width="48" height="28" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
     <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
     <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
-  </svg> </span></a>мгновенный расчёт</h5></span></div>
+  </svg> </span></a></h5></span></div>
+<!--
+  <h5 class="card-title"><span class="text-muted"></i> мгновенный расчёт</h5></span>-->
+  <h5 class="card-title"><span class="text-muted"></i> мгновенный расчёт</h5></span>
   </div>
 
     </div>
 
-      <div style="position:absolute;z-index:10000;top:767px;margin-left:170px;">
+      <div style="position:absolute;z-index:10000;top:677px;margin-left:170px;">
         <div class="rating"> 
-         <!-- <h3 class="card-title"><span class="text-muted"> <h2></h2><span class="icon"><i class="fa fa-star" ></i><i class="fa fa-star" ></i><i class="fa fa-star" ></i><i class="fa fa-star" ></i><i class="fa fa-star" ></i></span>  -->
-          <h5 class="card-title"><span class="text-muted"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></i> высокое качество</h5></span>
+
+          <h5 class="card-title"><span class="text-muted"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></i> </h5></span>
+          <h5 class="card-title"><span class="text-muted"></i> высокое качество</h5></span>
          
         </div>  
         </div>
-        <div style="position:absolute;z-index:10000;top:767px;margin-left:900px;">
+        <div style="position:absolute;z-index:10000;top:679px;margin-left:900px;">
           <!--   <h6 class="card-title"><span class="text-muted">   <h2><i class="fas fa-truck"></i></h2></span></a></h6>-->
-          <h5 class="card-title"><span class="text-muted"> онлайн <i class="fa fa-shopping-cart" ></i></h5></span>
+          <h5 class="card-title"><span class="text-muted"> <i class="fa fa-shopping-cart" ></i></h5></span>
+          <h5 class="card-title"><span class="text-muted"> онлайн</h5></span>
            </div>
 
-        <div style="position:absolute;z-index:10000;top:767px;margin-left:1120px;">
-         <!--   <h6 class="card-title"><span class="text-muted">   <h2><i class="fas fa-truck"></i></h2></span></a></h6>-->
-          <h5 class="card-title"><span class="text-muted">доставка <i class="fas fa-walking"></i> , <i class="fas fa-truck"></i></h5></span>
+        <div style="position:absolute;z-index:10000;top:679px;margin-left:1170px;">
+
+          <h5 class="card-title"><span class="text-muted"> <i class="fas fa-walking"></i> , <i class="fas fa-truck"></i></h5></span>
+          <h5 class="card-title"><span class="text-muted">доставка </h5></span>
           </div>
 
         </div>
@@ -199,24 +207,6 @@
 
 
 
-<br>
-<br>
-<br>
-
-
-
-
-<div>
-
-{% thumbnail  "350" as im %}
-<a href="/"></a>
-<figure class="stock">
-<img src="/media/products/baner.jpg" width="100%">
-</figure>
-{% endthumbnail %}
-
-
-</div>
 
 
 
