--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -86,40 +86,16 @@
 </body>
 </body>
 </html>  
- <!--
-<html>
-  <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-   
-   <style type="text/css">
-     A IMG { border: none; }
-   </style>
-  </head>
-  <body>
-   <p><a href="http://127.0.0.1:8000"><h6 class="text-center"><img src="/media/products/podval.png" border="0"/></h6> 
-  </a></p>
-  </body>
- </html>   -->
 
-<!--
-<div >
-  <img src="/media/products/baner.jpg" border="0"/>
- 
-  </div>
--->
 
-<hr  width="100%"; height: 120px; color="	#808080" />
+<hr  width="100%" size="17" color="	#808080" />
 
 
 
 
 <br>
 
-<h6 class="text-center"><span class="text-muted"> <p style="color:rgb(229, 152, 147)">1997<img align="center" src="/media/products/005.png" alt="not found" class="img-fluid">2021</p></h6></span>  
-<h6 class="text-center"><span class="text-muted"><i class="fa fa-phone"></i> +7(495) 740*38*93<img align="center" class="img-fluid"></p></h6></span>
+<h6 class="text-center"><span class="text-muted"> <i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru                                                   <i class="fa fa-phone"></i> +7(495) 740-38-93</p></h6></span>  
 
-<h6 class="text-center"><span class="text-muted"><img align="center" class="img-fluid"><i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru</p></h6></span>
-
-</div>
 
 {% endblock %}
