--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -6,7 +6,7 @@
 
   <a href="/">
     <figure class="stock">
-      <img src="/media/products/logo_rose.png" width="65" height="45">
+      <img src="/media/products/logo_rose.png" width="97" height="65">
     </figure>
   </a>
  
@@ -17,7 +17,10 @@
     <ul class="navbar-nav ml-auto">
      
       <li {% if request.path == 'contact' %}class="nav-item active"{% else %}class="nav-item"{% endif %}>
-        <a class="nav-link" href="/about.html/">о нас <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="/about.html/">о нас <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/"></a>
       </li>
 <!-- 
       <li class="nav-item">
@@ -27,24 +30,31 @@
        <!--  <a class="nav-link" href="/layout.html">дизайн</a>-->
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/requirements.html/">требования к файлам</a>
+        <a class="nav-link active" href="/requirements.html/">требования к файлам</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/"></a>
       </li>
       <li class="nav-item">
        <!-- <a class="nav-link" href="/photo.html/">фотосъемка</a>-->
       </li> 
       <li class="nav-item">
-        <a class="nav-link" href="/delivery.html/">доставка</a>
+        <a class="nav-link active" href="/delivery.html/">доставка</a>
       </li>
-   
-      <a class="nav-link" href="/">info@005.ru</a>
-      <a class="nav-link" href="/">+7(495) 740*38*93</a>
+      <li class="nav-item">
+        <a class="nav-link" href="/"></a>
+      </li>
+      <a class="nav-link active" href="/">info@005.ru</a>
+      <a class="nav-link active" href="/">+7(495) 740-38-93</a>
     </li>
-     
+    <li class="nav-item">
+      <a class="nav-link" href="/"></a>
+    </li>
   
       {% if request.user.is_authenticated %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'mainapp:cart-home' %}">
-          <i class="fa fa-shopping-cart"></i>  Корзина
+          <i class="fa fa-shopping-cart"></i>  Корзина  
           <span class="badge badge-light">{{ request.user| cart_total }}</span>
         </a>
       </li>
