new google verification

--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -1,5 +1,5 @@
  
-
+<meta name="google-site-verification" content="NqnOesCfi00hB_plnpL-E_pa9D1Gm_FGJYWEO1DvFLM" />
 
 {% extends 'products/base.html' %}
 {% load thumbnail %}
@@ -9,7 +9,7 @@
 
 <!-- DON'T WRITE THIS -->
 {% load static %}
-<img src="{% static "images/hi.jpg" %}" alt="Hi!" />
+<img src="{% static "products/hi.jpg" %}" alt="Hi!" />
 
 	{% thumbnail product.mainimage "300" as im %}
 		        <img align="center" src="{{ im.url }}"  class="img-fluid">
