--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -97,7 +97,11 @@
 
 <h6 class="text-center"><span class="text-muted"> <i class="fa fa-envelope" aria-hidden="true"></i>info@005.ru 
 
-    <img src="/media/products/logo_rose.png" width="97" height="65">
+  <a href="/">
+ 
+      <img src="/media/products/logo_rose.png" width="97" height="65">
+ 
+  </a>
 
 <i class="fa fa-phone"></i>      +7(495) 740-38-93</p></h6></span>  
 
