clickable images on products template

--- a/products/templates/products/category_products.html
+++ b/products/templates/products/category_products.html
@@ -39,14 +39,14 @@
 
 
 			
-
+					<a  href="/product/{{ product.slug }}">
 
 					{% thumbnail product.mainimage "300" as im %}
 					<img align="center" src="{{ im.url }}"  class="img-fluid">
 					
 					{% endthumbnail %}  
 
-
+					</a>
 
 				<!--	<img src="{{ product.mainimage.url }}" style="width: 100%; height: 250px;"> -->
 				</div>
