--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -39,13 +39,13 @@
        <!-- <a class="nav-link" href="/photo.html/">фотосъемка</a>-->
       </li> 
       <li class="nav-item">
-        <a class="nav-link active" href="/delivery.html/">доставка</a>
+        <a class="nav-link active" href="/delivery.html/"><i class="fas fa-walking"></i> доставка <i class="fas fa-truck"></i></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/"></a>
       </li>
-      <a class="nav-link active" href="/">info@005.ru</a>
-      <a class="nav-link active" href="/">+7(495) 740-38-93</a>
+      <a class="nav-link active" href="/"><i class="fas fa-envelope"></i>info@005.ru</a>
+      <a class="nav-link active" href="/"><i class="fas fa-phone"></i>+7(495) 740-38-93</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/"></a>
