--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -24,6 +24,7 @@
 
 
 
+
 {% load crispy_forms_tags %}
 <div class="col-md-">
   <span class="icon"><i class="fa fa-search"></i></span>
@@ -68,6 +69,7 @@
     </div>
     <div class="col-sm">
       <button type= "submit"
+      
         type="button" class="btn btn-success">Искать</button>
 
       </button>
@@ -130,11 +132,11 @@
 
 <div class="blog">
 
-  <H6 STYLE="font-family: 'avenir next rounded std'">
  <div class="container">
   
 
- <H2 class="text-center" STYLE="font-family: 'avenir next rounded std'">Категории продуктов</H2>
+  <H2 class="text-center"  >Категории продуктов</H2>
+
  <br><br>
   <div class="row">
           
