--- a/staticfiles/admin/css/base.css
+++ b/staticfiles/admin/css/base.css
@@ -12,7 +12,8 @@ body {
     margin: 0;
     padding: 0;
     font-size: 14px;
-    font-family: "Roboto","Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
+    font-family:  Arial, "Times New Roman", sans-serif;
+    "Yanone Kaffeesatz","Roboto","Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
     color: #333;
     background: #fff;
 }
