--- a/staticfiles/admin/css/fonts.css
+++ b/staticfiles/admin/css/fonts.css
@@ -1,13 +1,10 @@
-@font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto-Bold-webfont.woff');
-    font-weight: 700;
-    font-style: normal;
-}
 
 @font-face {
-    font-family: 'Roboto';
-    src: url('../fonts/Roboto-Regular-webfont.woff');
+
+        font-family: "Open Sans";
+        src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
+             url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
+      }
     font-weight: 400;
     font-style: normal;
 }
@@ -16,5 +13,17 @@
     font-family: 'Roboto';
     src: url('../fonts/Roboto-Light-webfont.woff');
     font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto-Regular-webfont.woff');
+    font-weight: 700;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto-Regular-webfont.woff');
+    font-weight: 400;
     font-style: normal;
 }
