--- a/products/templates/products/navbar.html
+++ b/products/templates/products/navbar.html
@@ -4,11 +4,15 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
 
-  <a href="/">
-    <figure class="stock">
-      <img src="/media/products/logo_rose.png" width="97" height="65">
-    </figure>
-  </a>
+ 
+     
+  
+      <span class="align-middle"> <a href="/">
+
+         <img src="/media/products/logo_rose.png" width="90" height="60">
+      
+      </a></span>
+   
  
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -30,7 +34,7 @@
        <!--  <a class="nav-link" href="/layout.html">дизайн</a>-->
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="/requirements.html/">требования к файлам</a>
+        <a class="nav-link active" href="/requirements.html/"><i class="fas fa-file"></i> требования к файлам</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/"></a>
@@ -39,13 +43,13 @@
        <!-- <a class="nav-link" href="/photo.html/">фотосъемка</a>-->
       </li> 
       <li class="nav-item">
-        <a class="nav-link active" href="/delivery.html/"><i class="fas fa-walking"></i> доставка <i class="fas fa-truck"></i></a>
+        <a class="nav-link active" href="/delivery.html/"><i class="fas fa-truck"></i> доставка </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/"></a>
       </li>
-      <a class="nav-link active" href="/"><i class="fas fa-envelope"></i>info@005.ru</a>
-      <a class="nav-link active" href="/"><i class="fas fa-phone"></i>+7(495) 740-38-93</a>
+      <a class="nav-link active" href="/"><i class="fas fa-envelope"></i> info@005.ru</a>
+      <a class="nav-link active" href="/"><i class="fas fa-phone"></i> +7(495) 740-38-93</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/"></a>
