--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -39,7 +39,7 @@
 
 {% thumbnail  "0" as im %}
 <img align="center" src="{{ im.url }}"  width="100%" class="img-fluid">
-<img src="/media/products/банер2.jpg" width="100%">
+<img src="/media/products/банер_red_new.png" width="100%">
 {% endthumbnail %}
 
 
@@ -206,7 +206,7 @@
     
     <a href="/">
  {% thumbnail   "0" as im %}
-    <img src="/media/products/baner.jpg" width="100%">
+    <img src="/media/products/banner.png" width="100%">
     {% endthumbnail %}
   </a>
 
