--- a/products/templates/products/delivery.html
+++ b/products/templates/products/delivery.html
@@ -14,7 +14,7 @@
     
     {% block content %}
     
-    <h5 class="text-center"><span class="text-muted"><i class="fas fa-walking"></i> , <i class="fas fa-truck"></i></h5></span>
+    <h5 class="text-center"><span class="text-muted"></h5></span>
       
     <div class="blog">
     
@@ -22,7 +22,10 @@
      <div class="container">
       
      <h2 class="text-center">доставка</h2>
-     <H6 STYLE="font-family: 'avenir next rounded std'"></H6>
+
+   
+     <br>
+  
 
      Стоимость доставки расчитывается отдельно и составляет 300 рублей за груз до 5 кг (<i class="fas fa-walking"></i>) по г. Москва
      и 2500 рублей (<i class="fas fa-truck"></i>)за груз более 5 кг. 
